[package]
name = "rust-s3-asr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MQTT
rumqttc = "0.24"

# S3 / MinIO
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.1"

# HTTP / LiteLLM
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
dotenv = "0.15"
